# TESI-Vision_Caption

./: .env.example  .gitignore  PROMPT.md  README.md  plan.md  pyproject.toml  run_server.sh
Docs/: chatterboxtts_com_docs.cleaned.md  costruzione_dataset_object_detection.md  docs_ollama_com.cleaned.md  docs_pytorch_org_docs_stable_distributed_html.cleaned.md  docs_pytorch_org_docs_stable_torch_html.cleaned.md  optimization_ideas.md  performance_report_streaming.md  pydantic_dev_docs.cleaned.md  rfdetr_1_6_5.md  sfide_e_problemi.md  transfer_learning_finetuning_rfdetr.md
scripts/: benchmark_vlm.py  test_client_webcam.py  test_ssim_live.py
src/vision_caption/: __main__.py
src/vision_caption/adapters/scene/: HybridSceneDetectorAdapter.py  RfdetrCustomSceneDetectorAdapter.py  RfdetrSceneDetectorAdapter.py  SsimSceneDetectorAdapter.py
src/vision_caption/adapters/tts/: ChatterboxSynthesizer.py  ElevenLabsSynthesizer.py
src/vision_caption/adapters/vlm/: OpenRouterCaptionGenerator.py
src/vision_caption/core/domain/: audio.py  captionResult.py  detection.py  frame.py  sceneAnalysisResult.py
src/vision_caption/core/ports/: CaptionGeneratorPort.py  SceneDetectorPort.py  SpeechSynthesizerPort.py
src/vision_caption/core/services/: caption_pipeline.py  rate_limiter.py
src/vision_caption/infrastructure/server/: app.py  ws_handler.py
