[project]
name = "visioncaption-tesi"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "opencv-contrib-python>=4.13.0.92",
    "pydantic>=2.13.4",
    "rfdetr>=1.7.0",
    "scikit-image>=0.26.0",
    "uvicorn>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_caption"]


