[project]
name = "visioncaption-tesi"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "opencv-contrib-python>=4.13.0.92",
    "pydantic>=2.13.4",
    "rfdetr>=1.7.0",
    "scikit-image>=0.26.0",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_caption"]

[tool.uv]
index-strategy = "unsafe-best-match"
override-dependencies = [
    "torch>=2.12.0",
    "torchvision>=0.27.0"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" }
]
torchvision = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" }
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"

[[tool.uv.index]]
name = "pytorch-base"
url = "https://download.pytorch.org/whl/"



